--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "antrix.chopbet"
         minSdkVersion 19
@@ -29,18 +29,20 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.4.2'
     compile 'com.google.firebase:firebase-database:11.4.2'
     compile 'com.google.firebase:firebase-core:11.4.2'
+    compile 'com.google.firebase:firebase-firestore:11.4.2'
     compile 'com.google.firebase:firebase-messaging:11.4.2'
     compile 'com.firebaseui:firebase-ui-storage:0.6.0'
     compile 'com.firebaseui:firebase-ui:2.0.1'
     compile 'com.google.firebase:firebase-storage:11.4.2'
     compile 'com.google.android.gms:play-services-auth:11.4.2'
     compile 'com.google.android.gms:play-services-location:11.4.2'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.4.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v4:25.4.0'
+    compile 'com.android.support:design:25.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.github.rasoulmiri:buttonloading:v1.0.5'
+    compile 'com.github.rasoulmiri:buttonloading:v1.0.7'
+    compile 'com.github.rasoulmiri:Skeleton:v1.0.5'
     compile 'com.hbb20:ccp:2.0.3'
     compile 'com.github.StevenDXC:DxLoadingButton:1.5'
     testCompile 'junit:junit:4.12'
