--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,6 @@
         <activity
             android:name=".Activities.activityChopBet"
             android:label="@string/app_name">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-
         </activity>
         <activity android:name=".Activities.activityEditUserProfile"
             android:windowSoftInputMode="adjustResize">
@@ -31,10 +23,22 @@
         <activity android:name=".Activities.activityRegisterLogin"
             android:windowSoftInputMode="adjustResize">
 
-
         </activity>
 
-        <activity android:name=".Activities.activityPhoneVerify"/>
+        <activity android:name=".Activities.activityPhoneVerify"
+            android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".Activities.activityBetDetails"/>
+        <activity android:name=".Activities.activityEditUsername"/>
+        <activity android:name=".Activities.activitySplashScreen">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+        <activity android:name=".Activities.activityAddFriend"/>
 
     </application>
 
