--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,26 +10,35 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:screenOrientation="portrait"
             android:name=".Activities.activityChopBet"
             android:label="@string/app_name">
         </activity>
         <activity android:name=".Activities.activityEditUserProfile"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize">
 
         </activity>
-        <activity android:name=".Activities.activityUserProfile">
+        <activity android:name=".Activities.activityUserProfile"
+            android:screenOrientation="portrait">
 
         </activity>
         <activity android:name=".Activities.activityRegisterLogin"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize">
 
         </activity>
 
         <activity android:name=".Activities.activityPhoneVerify"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"/>
-        <activity android:name=".Activities.activityBetDetails"/>
-        <activity android:name=".Activities.activityEditUsername"/>
-        <activity android:name=".Activities.activitySplashScreen">
+        <activity android:name=".Activities.activityBetDetails"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.activityEditUsername"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".Activities.activitySplashScreen"
+            android:screenOrientation="portrait">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,8 +47,10 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".Activities.activityAddFriend"/>
-        <activity android:name=".Activities.activityFriendRequests"/>
+        <activity android:name=".Activities.activityAddFriend"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.activityFriendRequests"
+            android:screenOrientation="portrait"/>
 
 
     </application>
