--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,49 +10,52 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:screenOrientation="portrait"
             android:name=".Activities.activityChopBet"
-            android:label="@string/app_name">
-        </activity>
-        <activity android:name=".Activities.activityEditUserProfile"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.activityEditUserProfile"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize">
-
-        </activity>
-        <activity android:name=".Activities.activityUserProfile"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".Activities.activityUserProfile"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.activityRegisterLogin"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".Activities.activityPhoneVerify"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".Activities.activityBetDetails"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.activityEditUsername"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".Activities.activitySplashScreen"
             android:screenOrientation="portrait">
-
-        </activity>
-        <activity android:name=".Activities.activityRegisterLogin"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize">
-
-        </activity>
-
-        <activity android:name=".Activities.activityPhoneVerify"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity android:name=".Activities.activityBetDetails"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Activities.activityEditUsername"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity android:name=".Activities.activitySplashScreen"
-            android:screenOrientation="portrait">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".Activities.activityAddFriend"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Activities.activityFriendRequests"
-            android:screenOrientation="portrait"/>
-
-
+        <activity
+            android:name=".Activities.activityAddFriend"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.activityFriendRequests"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.activityAddFunds"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".Activities.activityTransactionDetails"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
