--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,8 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
@@ -48,8 +50,12 @@ dependencies {
     compile 'com.github.StevenDXC:DxLoadingButton:1.5'
     compile 'com.github.deluakin:hubtel-payment:v1.3'
     compile 'com.github.tgio:rncryptor-native:0.0.9'
+    compile 'com.koushikdutta.ion:ion:2.+'
     testCompile 'junit:junit:4.12'
 }
+
+
+
 
 
 
