--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,6 @@ dependencies {
     compile 'com.firebaseui:firebase-ui:2.0.1'
     compile 'com.google.firebase:firebase-storage:11.4.2'
     compile 'com.google.android.gms:play-services-auth:11.4.2'
-    compile 'com.google.android.gms:play-services-location:11.4.2'
     compile 'com.android.support:appcompat-v7:25.4.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.android.support:support-v4:25.4.0'
@@ -52,6 +51,8 @@ dependencies {
     compile 'com.github.tgio:rncryptor-native:0.0.9'
     compile 'com.koushikdutta.ion:ion:2.+'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.halysongoncalves:pugnotification:1.8.1'
+
 }
 
 
